--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="initial-scale=1, minimum-scale=1,maximum-scale=1, user-scalable=0, height=device-height, width=device-width" />
         <title>מכונת הסטנדאפ של שחר חסון</title>
-        <meta property="og:image" content="images/Sofsheli_Logo_web.png"/>
+        <meta property="og:image" content="http://sofsheli.kidstv.co.il/images/Sofsheli_Logo_web.png"/>
         <link rel="icon" type="image/png" href="images/favicon.ico">
         <!--css-->
         <link rel="stylesheet" type="text/css" href="css/reset.css" />
