sarah removing yes logo change kidsTV logo on bottom right change sofsheli logo on last page

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
                fjs.parentNode.insertBefore(js, fjs);
              }(document, 'script', 'facebook-jssdk'));
             
-        </script>
+        </script>
+
     </head>
     <body>
         <!-- Header -->
         <div class="elisha_logo"><a href="http://sofsheli.kidstv.co.il/"><img src="images/Sofsheli_Logo_web.png" alt="סופשלי" /></a></div>
         <div class="kids_logo"><img src="images/kidstv_logo.png" alt="ערוץ הילדים" /></div>
-        <div class="yes_logo"><img src="images/logo_logo.png" alt="Yes" /></div>
+        <!--<div class="yes_logo"><img src="images/logo_logo.png" alt="Yes" /></div>-->
         <div class="teacher_left hidden-xs"><img src="images/ShaharH_web.png" alt="סופשלי" /></div>
         <div class="main-view" id="main-view" data-ui-view=""></div>
 
